[package]
name = "occlusion"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
csv = "1.4.0"
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.8"
tempfile = "3.24.0"
rand = "0.9"
rand_chacha = "0.9"

[[bench]]
name = "store_bench"
harness = false
