[package]
name = "occlusion"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Use std HashMap instead of FxHash (slower, but no extra dependency)
nofx = []
# Alternative store implementations (mutually exclusive in production)
# Enable one to swap out the default HashMapStore
vec = []
hybrid = []
fullhash = []
# Enable all stores for benchmarking comparisons
bench = []
# Enable URL loading (adds reqwest dependency)
url = ["dep:reqwest"]

[dependencies]
csv = "1.4.0"
reqwest = { version = "0.13", features = ["blocking"], optional = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.8"
rand = "0.9"
rand_chacha = "0.9"
tempfile = "3.24.0"

[[bench]]
name = "store_bench"
harness = false
required-features = ["bench"]
