[package]
name = "occlusion"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Use std HashMap instead of FxHash (slower, but resistant to DoS)
nofx = []

# Alternative store implementations (mutually exclusive in production)
# Enable one to swap out the default HashMapStore
vec = []
hybrid = []
fullhash = []

# Enable all stores for benchmarking comparisons
bench = []

[dependencies]
rustc-hash = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = "0.8"
rand = "0.9"
rstest = "0.24"
tempfile = "3.24.0"

[[bench]]
name = "store_bench"
harness = false
required-features = ["bench"]
