[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Use std HashMap instead of FxHash
nofx = ["occlusion/nofx"]
# Alternative store implementations
vec = ["occlusion/vec"]
hybrid = ["occlusion/hybrid"]
fullhash = ["occlusion/fullhash"]

[dependencies]
occlusion = { path = "../lib" }
rustc-hash = { workspace = true }

clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
reqwest = "0.13"
rocket = { version = "0.5", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
