[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = []
# Use std HashMap instead of FxHash (slower, but resistant to DoS)
nofx = ["occlusion/nofx"]

# Alternative store implementations
vec = ["occlusion/vec"]
hybrid = ["occlusion/hybrid"]
fullhash = ["occlusion/fullhash"]

[dependencies]
occlusion = { path = "../lib" }

clap = { version = "4.5.54", features = ["derive", "env"] }
csv = "1.4.0"
reqwest = "0.13"
rocket = { version = "0.5", features = ["json"] }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
