[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generate-csv"
path = "src/bin/generate_csv.rs"

[features]
default = []
# Use std HashMap instead of FxHash (slower, but resistant to DoS)
nofx = ["occlusion/nofx"]

# Alternative store implementations
vec = ["occlusion/vec"]
hybrid = ["occlusion/hybrid"]
fullhash = ["occlusion/fullhash"]

# Bake data source URL at compile time (set OCCLUSION_STATIC_URL env var)
static-url = []

[dependencies]
occlusion = { path = "../lib" }

clap = { version = "4.5.54", features = ["derive", "env"] }
csv = "1.4.0"
rand = "0.9"
reqwest = "0.13"
rocket = { version = "0.5", features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
